Build in BT RelEng

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
-*.pyc 
-numeronym/*.pyc
-*.swp
-*.swo
+*.egg-info/
+*.py[cod]
+.DS_Store
+.cache/
+.coverage
+.eggs/
+.idea/*
+.python-version
+.version
+app.blueprint~
+build/
 dist/
-numeronym.egg-info/
+doc/_build
+exported.env
+metadata.py~
+test-data/
+test-reports/*
